--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <meta name="theme-color" content="#000000">
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
-
+    <meta name="google-site-verification" content="cfOrvFHCa9ex5GlC5PRQdrUI5qhN8n2f_02AZOfuix8" />
     <link href="https://fonts.googleapis.com/css?family=Lato:400,900" rel="stylesheet">
     <title>Ivan Seed | Portfolio</title>
     <meta name="description" content="Ivan Seed's personal site that showcases his personal and professional projects, outlines his skills and includes contact information." />
