--- a/public/index.html
+++ b/public/index.html
@@ -18,6 +18,24 @@
     <div id="root"></div>
     <canvas></canvas>
     <script>
+      function cfDecodeEmail(encodedString) {
+        var email = "", r = parseInt(encodedString.substr(0, 2), 16), n, i;
+        for (n = 2; encodedString.length - n; n += 2){
+          i = parseInt(encodedString.substr(n, 2), 16) ^ r;
+          email += String.fromCharCode(i);
+        }
+        return email;
+      }
+
+      var interval = setInterval(function() {
+        var element = document.querySelector('[data-cfemail]');
+
+        if (element) {
+          element.innerHTML = cfDecodeEmail(element.getAttribute('data-cfemail'));
+          clearInterval(interval);
+        }
+      }, 500);
+
       // Author - Evan You - http://evanyou.me/
       var c = document.getElementsByTagName('canvas')[0],
           x = c.getContext('2d'),
