Google console verification

--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,7 @@
     <link href="https://fonts.googleapis.com/css?family=Lato:400,900" rel="stylesheet">
     <title>Ivan Seed | Portfolio</title>
     <meta name="description" content="Ivan Seed's personal site that showcases his personal and professional projects, outlines his skills and includes contact information." />
+    <meta name="google-site-verification" content="cfOrvFHCa9ex5GlC5PRQdrUI5qhN8n2f_02AZOfuix8" />
   </head>
   <body>
     <noscript>
